--- a/Ampere/wcs1800.md
+++ b/Ampere/wcs1800.md
@@ -1,17 +1,17 @@
-## gestion du composant wcs1800
+## Gestion du composant wcs1800
 
-avec la datasheet je vais etre capable de prendre la valeur reçu
+avec la datasheet je vais etre capable de prendre la valeur reçue
 
 
 https://pdf1.alldatasheet.com/datasheet-pdf/view/714494/WINSON/WCS1800.html
 
-## resumé
-le document donne comme renseignement
-la sensibilité est de 60 mV/A
-la valeur peut etre negative ou positive la valeur de ref est 0 à 0mV
+## Resumé
+-le document donne comme renseignement
+-la sensibilité est de 60 mV/A
+-la valeur peut etre negative ou positive la valeur de ref est 0 à 0mV
 
-il faut appliquer un ratio sur la valeur suivant la température 
-la valeur de ref est de 1 à 30°C pour 5V)
+-il faut appliquer un ratio sur la valeur suivant la température 
+-la valeur de ref est de 1 à 30°C pour 5V)
 
 
 
