--- a/Ampere/wcs1800.md
+++ b/Ampere/wcs1800.md
@@ -13,5 +13,7 @@ https://pdf1.alldatasheet.com/datasheet-pdf/view/714494/WINSON/WCS1800.html
 - il faut appliquer un ratio sur la valeur suivant la température 
 - la valeur de ref est de 1 à 30°C pour 5V)
 
+### formule pour 5v
 
+- `y = 0.0631 + 2.5197` 
 
