--- a/Ampere/wcs1800.md
+++ b/Ampere/wcs1800.md
@@ -3,7 +3,7 @@
 avec la datasheet je vais etre capable de prendre la valeur reçue
 
 
-https://pdf1.alldatasheet.com/datasheet-pdf/view/714494/WINSON/WCS1800.html
+[datasheet WCS1800 ](https://pdf1.alldatasheet.com/datasheet-pdf/view/714494/WINSON/WCS1800.html)
 
 ## Resumé
 ### le document donne comme renseignement
